############################################
# Changelog of the check_nwc_health plugin #
############################################

2013-01-07 1.7
- add f5 bigip pool completeness

2012-12-10 1.6
- add checkpoint firewall-1

2012-11-23 1.5
- add 64bit interfaces

2012-09-26 1.4.9.1
- fix a bug in uptime calculation

2012-09-24 1.4.9
- add hp procurve cpu-load and memory-usage
- fix a bug in cisco memory perfdata

2012-08-28 1.4.8
- add hp procurve hardware

2012-08-21 1.4.7.1
- fix a bug in servertype locallinux, interfaces and --name (Thanks Simon Meggle)

2012-08-21 1.4.7
- add f5 bigip
- bugfix in mode uptime

2012-08-10 1.4.6
- add mode uptime

2012-08-10 1.4.5.2
- fix a bug in statefilesdir creation under omd

2012-08-02 1.4.5.1
- add more hardware info for EMC-DS24M2 (McData Sphereon 4500)

2012-07-31 1.4.5
- add UCD-MIB for SecureOS (McAfee Sidewinder)

2012-07-31 1.4.4
- add fibre alliance mib sensor table for MeOS/DS-4700M

2012-07-20 1.4.3.1
- add the index to interface names, if interfaces all have the same name
- first experiments with MeOS

2012-07-12 1.4.3
- fix a bug in the role parameter for hsrp
- fix a temperature index where ios doesn't set the counter itself
- add mib2-interface-modes to brocade fabos

2012-07-05 1.4.2
- add mode encode for interface names with ' or "

2012-07-05 1.4.1
- add --ifspeedin, --ifspeedout, --ifspeed (used for asymmetric mpls)

2012-06-22 1.4
- add linux local interfaces (interface-usage/errors only) with --servertype linuxlocal
- add mode walk
- rename brocade300 -> fabos

2012-04-23 1.3
- add mode list-interfaces-detail (Cisco only)
- add brocade300 (hardware-health,memory-usage,cpu-load only)

2012-03-29 1.2
- add support for Cisco Nexus (cpu, mem, )
- add Nexus sensors
- add Allied Telesyn (only interfaces so far)

2012-03-19 1.1.1.1
- bugfix in list-hsrp-groups
- --units KBi/MBi/GBi for interface-usage

2012-02-22 1.1.1
- add mode hsrp-failover (Thanks Munich)

2012-02-22 1.1